--- a/styles/output.css
+++ b/styles/output.css
@@ -554,112 +554,44 @@ video {
   display: none;
 }
 
-.-mt-2 {
-  margin-top: -0.5rem;
-}
-
-.mb-7 {
-  margin-bottom: 1.75rem;
-}
-
 .flex {
   display: flex;
-}
-
-.inline-flex {
-  display: inline-flex;
 }
 
 .table {
   display: table;
 }
 
+.h-full {
+  height: 100%;
+}
+
+.h-8 {
+  height: 2rem;
+}
+
+.min-h-full {
+  min-height: 100%;
+}
+
 .w-full {
   width: 100%;
 }
 
-.min-w-\[140px\] {
-  min-width: 140px;
+.w-8 {
+  width: 2rem;
 }
 
-.min-w-\[150px\] {
-  min-width: 150px;
-}
-
-.min-w-\[200px\] {
-  min-width: 200px;
-}
-
-.min-w-\[260px\] {
-  min-width: 260px;
-}
-
-.min-w-\[298px\] {
-  min-width: 298px;
-}
-
-.max-w-\[298px\] {
-  max-width: 298px;
-}
-
-.grow {
-  flex-grow: 1;
-}
-
-.basis-\[140px\] {
-  flex-basis: 140px;
-}
-
-.basis-\[150px\] {
-  flex-basis: 150px;
-}
-
-.basis-\[200px\] {
-  flex-basis: 200px;
-}
-
-.basis-\[260px\] {
-  flex-basis: 260px;
-}
-
-.basis-\[298px\] {
-  flex-basis: 298px;
-}
-
-.basis-\[371px\] {
-  flex-basis: 371px;
-}
-
-.basis-\[44px\] {
-  flex-basis: 44px;
-}
-
-.basis-44 {
-  flex-basis: 11rem;
-}
-
-.cursor-pointer {
-  cursor: pointer;
-}
-
-.flex-wrap {
-  flex-wrap: wrap;
+.min-w-full {
+  min-width: 100%;
 }
 
 .items-center {
   align-items: center;
 }
 
-.justify-center {
-  justify-content: center;
-}
-
 .justify-between {
   justify-content: space-between;
-}
-
-.gap-1 {
-  gap: 0.25rem;
 }
 
 .gap-2 {
@@ -670,51 +602,26 @@ video {
   gap: 1.25rem;
 }
 
-.gap-6 {
-  gap: 1.5rem;
+.rounded-full {
+  border-radius: 9999px;
 }
 
-.overflow-hidden {
-  overflow: hidden;
-}
-
-.overflow-scroll {
-  overflow: scroll;
-}
-
-.overflow-x-auto {
-  overflow-x: auto;
-}
-
-.whitespace-nowrap {
-  white-space: nowrap;
-}
-
-.rounded-md {
-  border-radius: 0.375rem;
+.rounded-none {
+  border-radius: 0px;
 }
 
 .rounded-xl {
   border-radius: 0.75rem;
 }
 
-.border-none {
-  border-style: none;
+.bg-gray-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
-.bg-custom-gray-0 {
+.bg-indigo-50 {
   --tw-bg-opacity: 1;
-  background-color: rgb(247 248 250 / var(--tw-bg-opacity));
-}
-
-.bg-custom-gray-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(233 237 245 / var(--tw-bg-opacity));
-}
-
-.bg-custom-indigo-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(94 90 219 / var(--tw-bg-opacity));
+  background-color: rgb(238 242 255 / var(--tw-bg-opacity));
 }
 
 .bg-white {
@@ -722,61 +629,47 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.p-5 {
-  padding: 1.25rem;
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
+.p-0 {
+  padding: 0px;
 }
 
-.px-\[6px\] {
-  padding-left: 6px;
-  padding-right: 6px;
+.px-2\.5 {
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
 }
 
-.py-1\.5 {
-  padding-top: 0.375rem;
-  padding-bottom: 0.375rem;
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+.py-0\.5 {
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
 }
 
-.pb-2 {
-  padding-bottom: 0.5rem;
-}
-
-.pl-3 {
-  padding-left: 0.75rem;
-}
-
-.text-left {
-  text-align: left;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.text-right {
-  text-align: right;
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .font-inter {
-  font-family: "Inter", system-ui;
+  font-family: Inter, sans-serif;
 }
 
-.text-\[10px\] {
-  font-size: 10px;
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .text-xs {
@@ -784,57 +677,27 @@ video {
   line-height: 1rem;
 }
 
+.font-bold {
+  font-weight: 700;
+}
+
 .font-medium {
   font-weight: 500;
 }
 
-.font-semibold {
-  font-weight: 600;
-}
-
-.uppercase {
-  text-transform: uppercase;
-}
-
-.text-custom-gray-300 {
+.text-gray-400 {
   --tw-text-opacity: 1;
-  color: rgb(161 169 184 / var(--tw-text-opacity));
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
-.text-custom-gray-700 {
+.text-gray-900 {
   --tw-text-opacity: 1;
-  color: rgb(70 79 96 / var(--tw-text-opacity));
+  color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
-.text-gray-500 {
+.text-indigo-500 {
   --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.shadow-custom {
-  --tw-shadow: 0px 0px 0px 1px #0000000f, 0px 1px 2px 0px #868fa029;
-  --tw-shadow-colored: 0px 0px 0px 1px var(--tw-shadow-color), 0px 1px 2px 0px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-custom4 {
-  --tw-shadow: 0px 0px 0px 1px #5E5ADB,0px 1px 1px 0px #0000001a;
-  --tw-shadow-colored: 0px 0px 0px 1px var(--tw-shadow-color), 0px 1px 1px 0px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.outline-none {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-
-.filter {
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+  color: rgb(99 102 241 / var(--tw-text-opacity));
 }
 
 .transition {
@@ -849,99 +712,21 @@ video {
   transition-duration: 300ms;
 }
 
-nav {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-nav::-webkit-scrollbar {
-  display: none;
-}
-
-main {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
-
-main::-webkit-scrollbar {
-  display: none;
-}
-
-nav .active {
-  position: relative;
-  font-weight: 700;
+.hover\:text-gray-900:hover {
   --tw-text-opacity: 1;
-  color: rgb(99 102 241 / var(--tw-text-opacity));
+  color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
-nav .active span {
-  font-weight: 500;
-}
+@media (min-width: 537px) {
+  .min-\[537px\]\:rounded-xl {
+    border-radius: 0.75rem;
+  }
 
-nav .active::after {
-  content: "";
-  position: absolute;
-  bottom: -0.5rem;
-  left: 0px;
-  height: 2.5px;
-  width: 100%;
-  border-radius: 0.5rem;
-  --tw-bg-opacity: 1;
-  background-color: rgb(99 102 241 / var(--tw-bg-opacity));
-}
-
-.placeholder\:text-custom-gray-300::-moz-placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(161 169 184 / var(--tw-text-opacity));
-}
-
-.placeholder\:text-custom-gray-300::placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(161 169 184 / var(--tw-text-opacity));
-}
-
-.focus-within\:shadow-custom2:focus-within {
-  --tw-shadow: 0px 0px 0px 4px #5e5adb66, 0px 0px 0px 1px #868fa052, 0px 1px 2px 0px #0000000f;
-  --tw-shadow-colored: 0px 0px 0px 4px var(--tw-shadow-color), 0px 0px 0px 1px var(--tw-shadow-color), 0px 1px 2px 0px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:bg-custom-indigo-600:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(73 69 196 / var(--tw-bg-opacity));
-}
-
-.hover\:text-custom-indigo-500:hover {
-  --tw-text-opacity: 1;
-  color: rgb(94 90 219 / var(--tw-text-opacity));
-}
-
-.hover\:shadow-custom1:hover {
-  --tw-shadow: 0px 0px 0px 1px #868fa066, 0px 1px 2px 0px #0000000f;
-  --tw-shadow-colored: 0px 0px 0px 1px var(--tw-shadow-color), 0px 1px 2px 0px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:shadow-custom5:hover {
-  --tw-shadow: 0px 0px 0px 1px #4945c4,0px 1px 1px 0px #0000001a;
-  --tw-shadow-colored: 0px 0px 0px 1px var(--tw-shadow-color), 0px 1px 1px 0px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:focus-within\:shadow-custom2:focus-within:hover {
-  --tw-shadow: 0px 0px 0px 4px #5e5adb66, 0px 0px 0px 1px #868fa052, 0px 1px 2px 0px #0000000f;
-  --tw-shadow-colored: 0px 0px 0px 4px var(--tw-shadow-color), 0px 0px 0px 1px var(--tw-shadow-color), 0px 1px 2px 0px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.focus\:shadow-custom6:focus {
-  --tw-shadow: 0px 0px 0px 4px #5e5adb66,0px 0px 0px 1px #5e5adb,0px 1px 1px 0px #0000001a;
-  --tw-shadow-colored: 0px 0px 0px 4px var(--tw-shadow-color), 0px 0px 0px 1px var(--tw-shadow-color), 0px 1px 1px 0px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-@media (min-width: 571px) {
-  .min-\[571px\]\:grow-0 {
-    flex-grow: 0;
+  .min-\[537px\]\:p-4 {
+    padding: 1rem;
   }
 }
