--- a/styles/input.css
+++ b/styles/input.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.primary-input {
+  @apply rounded-md px-3 py-1.5 text-sm text-gray-900 placeholder:text-gray-700 outline-none shadow-custom14 transition ease-in-out duration-300 hover:shadow-custom15 focus:shadow-custom16;
+}
+.button {
+  @apply text-sm font-medium text-center px-3 py-1.5 rounded-md transition ease-in-out duration-300;
+}
+.primary-button {
+  @apply text-white bg-indigo-500 shadow-custom hover:bg-indigo-600 hover:shadow-custom2 active:shadow-custom3 disabled:bg-indigo-300 disabled:text-[#EDEDFC] disabled:shadow-custom18;
+}
