--- a/styles/input.css
+++ b/styles/input.css
@@ -9,5 +9,20 @@
   @apply text-sm font-medium text-center px-3 py-1.5 rounded-md transition ease-in-out duration-300;
 }
 .primary-button {
-  @apply text-white bg-indigo-500 shadow-custom hover:bg-indigo-600 hover:shadow-custom2 active:shadow-custom3 disabled:bg-indigo-300 disabled:text-[#EDEDFC] disabled:shadow-custom18;
+  @apply text-white bg-indigo-500 shadow-custom hover:bg-indigo-600 hover:shadow-custom2 active:shadow-custom3;
+}
+.secondary-button {
+  @apply text-gray-700 bg-white shadow-custom4 hover:text-gray-900 hover:shadow-custom5 active:shadow-custom6;
+}
+.modal-overlay {
+  @apply fixed top-0 left-0 w-full h-full z-40;
+}
+.project-modal-form {
+  @apply w-full max-w-[90%] min-[537px]:max-w-[440px] rounded-xl overflow-hidden z-50 fixed top-1/2 left-1/2 shadow-custom17 -translate-x-1/2 -translate-y-1/2;
+}
+.modal-form-title {
+  @apply px-5 py-4 text-gray-900 text-lg font-medium bg-white border-b border-b-blue-50;
+}
+.modal-form-buttons {
+  @apply px-5 py-4 bg-white flex items-center justify-end gap-5;
 }
