--- a/styles/output.css
+++ b/styles/output.css
@@ -588,6 +588,22 @@ video {
   }
 }
 
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
+
+.relative {
+  position: relative;
+}
+
 .my-8 {
   margin-top: 2rem;
   margin-bottom: 2rem;
@@ -597,8 +613,16 @@ video {
   display: flex;
 }
 
+.inline-flex {
+  display: inline-flex;
+}
+
 .table {
   display: table;
+}
+
+.hidden {
+  display: none;
 }
 
 .h-8 {
@@ -607,6 +631,10 @@ video {
 
 .h-full {
   height: 100%;
+}
+
+.max-h-\[calc\(100vh-286px\)\] {
+  max-height: calc(100vh - 286px);
 }
 
 .min-h-full {
@@ -623,6 +651,14 @@ video {
 
 .min-w-full {
   min-width: 100%;
+}
+
+.table-auto {
+  table-layout: auto;
+}
+
+.border-collapse {
+  border-collapse: collapse;
 }
 
 .flex-wrap {
@@ -657,8 +693,28 @@ video {
   gap: 1.25rem;
 }
 
+.gap-6 {
+  gap: 1.5rem;
+}
+
+.overflow-x-auto {
+  overflow-x: auto;
+}
+
+.overflow-x-scroll {
+  overflow-x: scroll;
+}
+
+.whitespace-nowrap {
+  white-space: nowrap;
+}
+
 .rounded-full {
   border-radius: 9999px;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .rounded-none {
@@ -718,9 +774,22 @@ video {
   padding-bottom: 0.125rem;
 }
 
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.pb-2 {
+  padding-bottom: 0.5rem;
+}
+
+.text-center {
+  text-align: center;
 }
 
 .font-inter {
@@ -730,6 +799,11 @@ video {
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .text-xl {
@@ -964,12 +1038,110 @@ video {
   padding-bottom: 1rem;
 }
 
+.filter-tabs-nav {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.filter-tabs-nav::-webkit-scrollbar {
+  display: none;
+}
+
+.filter-tab {
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 500;
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
+}
+
+.filter-tab:hover {
+  --tw-text-opacity: 1;
+  color: rgb(99 102 241 / var(--tw-text-opacity));
+}
+
+.filter-tab.active {
+  position: relative;
+  font-weight: 700;
+  --tw-text-opacity: 1;
+  color: rgb(99 102 241 / var(--tw-text-opacity));
+}
+
+.filter-tab.active::after {
+  content: "";
+  position: absolute;
+  bottom: -0.5rem;
+  left: 0px;
+  height: 2.5px;
+  width: 100%;
+  border-radius: 0.5rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(99 102 241 / var(--tw-bg-opacity));
+}
+
+.filter-tab span {
+  border-radius: 0.75rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(233 237 245 / var(--tw-bg-opacity));
+  padding-left: 0.375rem;
+  padding-right: 0.375rem;
+  font-size: 10px;
+}
+
+.filter-tab.active span {
+  font-weight: 500;
+}
+
+.data-table-container {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.data-table-container::-webkit-scrollbar {
+  display: none;
+}
+
+.data-table-body .project-row:has(input[type="checkbox"]:checked) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(237 237 252 / var(--tw-bg-opacity));
+}
+
+.odd\:border-y:nth-child(odd) {
+  border-top-width: 1px;
+  border-bottom-width: 1px;
+}
+
+.odd\:border-\[\#E9EDF5\]:nth-child(odd) {
+  --tw-border-opacity: 1;
+  border-color: rgb(233 237 245 / var(--tw-border-opacity));
+}
+
 .hover\:text-gray-900:hover {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
+.hover\:underline:hover {
+  text-decoration-line: underline;
+}
+
+.group:hover .group-hover\:block {
+  display: block;
+}
+
 @media (min-width: 537px) {
+  .min-\[537px\]\:max-h-\[calc\(100vh-270px\)\] {
+    max-height: calc(100vh - 270px);
+  }
+
   .min-\[537px\]\:w-fit {
     width: -moz-fit-content;
     width: fit-content;
