--- a/styles/output.css
+++ b/styles/output.css
@@ -820,6 +820,10 @@ video {
   font-weight: 500;
 }
 
+.font-semibold {
+  font-weight: 600;
+}
+
 .text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
@@ -838,6 +842,16 @@ video {
 .text-indigo-500 {
   --tw-text-opacity: 1;
   color: rgb(99 102 241 / var(--tw-text-opacity));
+}
+
+.text-\[\#171C26\] {
+  --tw-text-opacity: 1;
+  color: rgb(23 28 38 / var(--tw-text-opacity));
+}
+
+.text-\[\#687182\] {
+  --tw-text-opacity: 1;
+  color: rgb(104 113 130 / var(--tw-text-opacity));
 }
 
 .opacity-10 {
