Update page information styling for current page indicator in the pagination
- Modified the logic for updating the page number styling in updatePageInfo function.
- The class for the current page indicator is now dynamically set based on whether the current page is the last page or not.
- If the current page is the last page or if there are no total pages, the color will change to a muted tone (text-[#826868]), otherwise, it will display the standard text color (text-[#171C26]).

--- a/styles/output.css
+++ b/styles/output.css
@@ -854,6 +854,20 @@ video {
   color: rgb(104 113 130 / var(--tw-text-opacity));
 }
 
+.text-\[\#ea2424e9\] {
+  color: #ea2424e9;
+}
+
+.text-\[\#43ff19\] {
+  --tw-text-opacity: 1;
+  color: rgb(67 255 25 / var(--tw-text-opacity));
+}
+
+.text-\[\#826868\] {
+  --tw-text-opacity: 1;
+  color: rgb(130 104 104 / var(--tw-text-opacity));
+}
+
 .opacity-10 {
   opacity: 0.1;
 }
