--- a/styles/output.css
+++ b/styles/output.css
@@ -1196,6 +1196,15 @@ video {
     max-height: calc(100vh - 270px);
   }
 
+  .min-\[537px\]\:min-h-full {
+    min-height: 100%;
+  }
+
+  .min-\[537px\]\:min-h-fit {
+    min-height: -moz-fit-content;
+    min-height: fit-content;
+  }
+
   .min-\[537px\]\:w-fit {
     width: -moz-fit-content;
     width: fit-content;
