"Implemented dynamic project data handling, sorting, filtering, rendering, and enhanced UI components for improved functionality and user experience.
- The structure of the default project data was improved, including fields such as resources, manager, status, and timeline.
- Added dynamic functions to create table cells, such as project ID, manager name with an image or initials, last updated, resources, and timeline.
- A flexible function was added to compare string, numeric, date, or array values for sorting.
- Logic for sorting projects dynamically by column when clicking the buttons, with ascending/descending direction control.
- Logic was added to filter projects based on status and search input, with sorting based on the selected field and order.
- Improved rendering of projects in the interface, supporting dynamic page display with the current page and row count, along with a message when no projects are found.
- added several functions to generate dynamic table cells for different project attributes. These include:
- createProjectIdCell(projectId): Generates a cell for the project ID.
- createProjectManagerCell(projectManager): Generates a cell for the project manager, including a profile image or initials if the image is missing.
- createProjectLastUpdatedCell(lastUpdated): Generates a cell displaying the last updated date with a timeline icon.
-
createProjectResourcesCell(projectResources): Generates a cell showing the number of resources in the project.
-createProjectTimeLineCell(projectTimeLine): Generates a cell displaying the project timeline with start and end dates.

--- a/styles/output.css
+++ b/styles/output.css
@@ -633,6 +633,10 @@ video {
   height: 100%;
 }
 
+.h-6 {
+  height: 1.5rem;
+}
+
 .max-h-\[calc\(100vh-286px\)\] {
   max-height: calc(100vh - 286px);
 }
@@ -647,6 +651,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-6 {
+  width: 1.5rem;
 }
 
 .min-w-\[298px\] {
@@ -697,6 +705,10 @@ video {
   min-width: 54px;
 }
 
+.grow {
+  flex-grow: 1;
+}
+
 .table-auto {
   table-layout: auto;
 }
@@ -745,6 +757,10 @@ video {
   gap: 1.5rem;
 }
 
+.gap-1\.5 {
+  gap: 0.375rem;
+}
+
 .overflow-x-auto {
   overflow-x: auto;
 }
@@ -755,6 +771,10 @@ video {
 
 .whitespace-nowrap {
   white-space: nowrap;
+}
+
+.text-nowrap {
+  text-wrap: nowrap;
 }
 
 .rounded-full {
@@ -773,6 +793,10 @@ video {
   border-radius: 0.75rem;
 }
 
+.border {
+  border-width: 1px;
+}
+
 .border-y {
   border-top-width: 1px;
   border-bottom-width: 1px;
@@ -781,6 +805,10 @@ video {
 .border-\[\#E9EDF5\] {
   --tw-border-opacity: 1;
   border-color: rgb(233 237 245 / var(--tw-border-opacity));
+}
+
+.border-\[\#D2D5DC80\] {
+  border-color: #D2D5DC80;
 }
 
 .bg-\[\#F7F9FC\] {
@@ -811,6 +839,16 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#E9EDF5\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(233 237 245 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#EDEDFC\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(237 237 252 / var(--tw-bg-opacity));
 }
 
 .object-cover {
@@ -845,6 +883,21 @@ video {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.px-\[7px\] {
+  padding-left: 7px;
+  padding-right: 7px;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .pb-2 {
@@ -892,12 +945,20 @@ video {
   line-height: 1rem;
 }
 
+.text-\[10px\] {
+  font-size: 10px;
+}
+
 .font-bold {
   font-weight: 700;
 }
 
 .font-medium {
   font-weight: 500;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .uppercase {
@@ -1294,5 +1355,9 @@ video {
 
   .min-\[537px\]\:p-4 {
     padding: 1rem;
+  }
+
+  .min-\[537px\]\:text-center {
+    text-align: center;
   }
 }
